mp3 controles y html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <div class="player">
+        <div class="imgBx">
+            <img src="./img/Cage_the_elephant_album.jpg" alt="">
+        </div>
+        <audio controls>
+            <source src="./Ain't No Rest For The Wicked (Original Version).mp3">
+        </audio>
+    </div>
 </body>
 </html>
